samples/_failures_safe/1761555417_b50a10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5390bb5.c: In function ‘main’:
./samples/SAFE/__tmp_c5390bb5.c:142:29: error: expected ‘]’ at end of input
  142 |                     result[i
      |                             ^
      |                             ]
./samples/SAFE/__tmp_c5390bb5.c:142:21: error: expected declaration or statement at end of input
  142 |                     result[i
      |                     ^~~~~~
./samples/SAFE/__tmp_c5390bb5.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5390bb5.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5390bb5.c:142:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5390bb5.c:142:21: error: expected declaration or statement at end of input
